Bug 384436 - Can't view emails when the message preview pane is disabled
Summary: Can't view emails when the message preview pane is disabled
Status: RESOLVED FIXED
Alias: None
Product: kmail2
Classification: Applications
Component: message list (other bugs)
Version First Reported In: Git (master)
Platform: Compiled Sources Linux
: NOR normal
Target Milestone: ---
Assignee: kdepim bugs
URL:
Keywords:
Depends on:
Blocks:
 
Reported: 2017-09-06 14:38 UTC by Omar Plummer
Modified: 2017-09-06 17:22 UTC (History)
2 users (show)

See Also:
Latest Commit:
Version Fixed/Implemented In:
Sentry Crash Report:


Attachments

Note You need to log in before you can comment on or make changes to this bug.
Description Omar Plummer 2017-09-06 14:38:38 UTC
I was, in the past, able to double click on an email in the message list to open it in a new window, whether or not the preview pane is enabled. Now it only works if I go to:

Settings -> Configure Kmail... -> Appearance -> Layout -> Message Preview Pane

And select one of the options that makes the preview pane enabled.

To summarize: If the preview pane is disabled, I can see the message list, but I am unable to open any particular email message from that list.

NOTE: Also, right-clicking on an email within the message list does not give me the option to "open message".
Comment 1 Allen Winter 2017-09-06 14:46:52 UTC
confirmed.  if you don't have message preview pane enabled you can't double-click open the message.
Comment 2 Laurent Montel 2017-09-06 15:22:55 UTC
Git commit e150c6bbfc33a2d66453e6134e6a970388ef6e18 by Montel Laurent.
Committed on 06/09/2017 at 15:22.
Pushed by mlaurent into branch 'master'.

Fix Bug 384436 - Can't view emails when the message preview pane is disabled

M  +7    -1    src/kmcommands.cpp
M  +5    -1    src/kmcommands.h
M  +13   -11   src/kmmainwidget.cpp
M  +5    -0    src/kmreadermainwin.cpp
M  +1    -0    src/kmreadermainwin.h

https://commits.kde.org/kmail/e150c6bbfc33a2d66453e6134e6a970388ef6e18
Comment 3 Omar Plummer 2017-09-06 17:22:39 UTC
Confirming that this now works for me as expected.

Thanks for resolving this, and especially for doing it so quickly.

Cheers.