Fix Bug 384436 - Can't view emails when the message preview pane is disabled

BUG: 384436